--- a/mono-server/modules/app/src/main/resources/email/admin/forgot-password.html
+++ b/mono-server/modules/app/src/main/resources/email/admin/forgot-password.html
@@ -344,7 +344,7 @@
                                                 color: #000000;
                                               "
                                             >
-                                              Dear [STUDENT]:
+                                              Dear [Admin]:
                                             </div>
                                           </td>
                                         </tr>
@@ -414,10 +414,9 @@
                                               "
                                             >
                                               We received a request to reset
-                                              your password for the Uni-D. To
-                                              proceed with the password reset
-                                              with the OTP. Here's your OTP
-                                              code:
+                                              your password for the Uni-D admin
+                                              portal. To proceed with the
+                                              password reset with the OTP.
                                             </div>
                                           </td>
                                         </tr>
@@ -535,7 +534,8 @@
                                                 color: #000000;
                                               "
                                             >
-                                              Welcome to Uni-D!
+                                              Simply enter this code when
+                                              prompted to reset your password.
                                             </div>
                                           </td>
                                         </tr>
@@ -560,6 +560,16 @@
                                             >
                                               To access Uni D and enter your OTP
                                               code:&nbsp;
+
+                                              <a
+                                                href=""
+                                                style="
+                                                  color: #407178;
+                                                  font-weight: 700;
+                                                  text-decoration: none;
+                                                "
+                                                >Click here</a
+                                              >
                                             </div>
                                           </td>
                                         </tr>
