--- a/mono-server/modules/app/src/main/resources/email/admin/otp.html
+++ b/mono-server/modules/app/src/main/resources/email/admin/otp.html
@@ -344,7 +344,7 @@
                                                 color: #000000;
                                               "
                                             >
-                                              Dear [STUDENT]:
+                                              Dear [Admin]:
                                             </div>
                                           </td>
                                         </tr>
@@ -413,11 +413,8 @@
                                                 color: #000000;
                                               "
                                             >
-                                              We received a request to reset
-                                              your password for the Uni-D. To
-                                              proceed with the password reset
-                                              with the OTP. Here's your OTP
-                                              code:
+                                              Here is your OTP for Uni-D Admin
+                                              Portal verification of XXX:
                                             </div>
                                           </td>
                                         </tr>
@@ -535,34 +532,26 @@
                                                 color: #000000;
                                               "
                                             >
-                                              Welcome to Uni-D!
-                                            </div>
-                                          </td>
-                                        </tr>
-                                        <tr>
-                                          <td
-                                            align="center"
-                                            style="
-                                              font-size: 0px;
-                                              padding: 0px 25px 15px 25px;
-                                              word-break: break-word;
-                                            "
-                                          >
-                                            <div
-                                              style="
-                                                font-family: Montserrat,
-                                                  sans-serif;
-                                                font-size: 15px;
-                                                line-height: 27px;
-                                                text-align: center;
-                                                color: #000000;
-                                              "
-                                            >
+                                              Please enter this code within the
+                                              admin portal to complete the
+                                              verification process.
+
+                                              <br />
+                                              <br />
                                               To access Uni D and enter your OTP
-                                              code:&nbsp;
+                                              code:
+                                              <a
+                                                href=""
+                                                style="
+                                                  color: #407178;
+                                                  font-weigth: 700;
+                                                "
+                                                >Click here</a
+                                              >
                                             </div>
                                           </td>
                                         </tr>
+
                                         <tr>
                                           <td
                                             align="center"
