--- a/mono-server/modules/app/src/main/resources/email/educator/forgot-password.html
+++ b/mono-server/modules/app/src/main/resources/email/educator/forgot-password.html
@@ -359,7 +359,7 @@
                                           >
                                             <p
                                               style="
-                                                border-top: solid 2px #7ed321;
+                                                border-top: solid 2px #6ca4ac;
                                                 font-size: 1px;
                                                 margin: 0px auto;
                                                 width: 80px;
@@ -372,7 +372,7 @@
                                                 cellpadding="0"
                                                 cellspacing="0"
                                                 style="
-                                                  border-top: solid 2px #7ed321;
+                                                  border-top: solid 2px #6ca4ac;
                                                   font-size: 1px;
                                                   margin: 0px auto;
                                                   width: 80px;
@@ -656,7 +656,7 @@
                                         font-size: 14px;
                                         line-height: 1.7;
                                         text-align: center;
-                                        color: #7ed321;
+                                        color: #6ca4ac;
                                       "
                                     >
                                       If you did not initiate this request,
