--- a/mono-server/modules/app/src/main/resources/email/educator/review-writing-skills-reminder.html
+++ b/mono-server/modules/app/src/main/resources/email/educator/review-writing-skills-reminder.html
@@ -155,7 +155,7 @@
                             <tbody>
                               <tr>
                                 <td align="center" style="font-size:0px;padding:0px 25px 0px 25px;word-break:break-word;">
-                                  <div style="font-family:Montserrat;font-size:21px;font-weight:500;line-height:1.7;text-align:center;color:#448878;">Review Skills Assessment Reminder</div>
+                                  <div style="font-family:Montserrat;font-size:21px;font-weight:700;line-height:1.7;text-align:center;color:#448878;">Review Skills Assessment Reminder</div>
                                 </td>
                               </tr>
                             </tbody>
@@ -183,7 +183,7 @@
                                     <tbody>
                                       <tr>
                                         <td align="left" style="font-size:0px;padding:10px 25px 10px 25px;word-break:break-word;">
-                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:16px;font-weight:normal;line-height:1.7;text-align:left;color:#000000;">Dear [Educator]:<div>We kindly remind you to review the skills and writings allocated to you by the admin on Uni-D. Please log in to your account to review the details:
+                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:16px;font-weight:normal;line-height:1.7;text-align:left;color:#000000;">Dear [Educator]:<div>We kindly remind you to review the writings allocated to you by the admin on Uni-D. Please log in to your account to review the details:
                                         </td>
                                       </tr>
                                     </tbody>
@@ -215,7 +215,7 @@
                                     <tbody>
                                       <tr>
                                         <td align="left" style="font-size:0px;padding:0px 25px 0px 25px;word-break:break-word;">
-                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#a39f9f;">Writing ID</div>
+                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#293538;">Writing ID</div>
                                         </td>
                                       </tr>
                                     </tbody>
@@ -237,7 +237,7 @@
                                       <tbody>
                                         <tr>
                                           <td align="center" style="font-size:0px;padding:0px 25px 0px 25px;word-break:break-word;">
-                                            <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;font-weight:500;line-height:1.7;text-align:center;color:#000000;">[Type]</div>
+                                            <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;font-weight:700;line-height:1.7;text-align:center;color:#000000;">[Type]</div>
                                           </td>
                                         </tr>
                                       </tbody>
@@ -271,7 +271,7 @@
                                     <tbody>
                                       <tr>
                                         <td align="left" style="font-size:0px;padding:0px 25px 0px 25px;word-break:break-word;">
-                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#a39f9f;">Student</div>
+                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#293538;">Student</div>
                                         </td>
                                       </tr>
                                     </tbody>
@@ -293,7 +293,7 @@
                                       <tbody>
                                         <tr>
                                           <td align="center" style="font-size:0px;padding:0px 25px 0px 25px;word-break:break-word;">
-                                            <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;font-weight:500;line-height:1.7;text-align:center;color:#000000;">[Student]</div>
+                                            <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;font-weight:700;line-height:1.7;text-align:center;color:#000000;">[Student]</div>
                                           </td>
                                         </tr>
                                       </tbody>
@@ -327,7 +327,7 @@
                                     <tbody>
                                       <tr>
                                         <td align="left" style="font-size:0px;padding:0px 25px 0px 25px;word-break:break-word;">
-                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#a39f9f;">Submission Date:</div>
+                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#293538;">Submission Date:</div>
                                         </td>
                                       </tr>
                                     </tbody>
@@ -349,7 +349,7 @@
                                       <tbody>
                                         <tr>
                                           <td align="center" style="font-size:0px;padding:0px 25px 0px 25px;word-break:break-word;">
-                                            <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;font-weight:500;line-height:1.7;text-align:center;color:#000000;">16 April 2023</div>
+                                            <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;font-weight:700;line-height:1.7;text-align:center;color:#000000;">16 April 2023</div>
                                           </td>
                                         </tr>
                                       </tbody>
@@ -383,7 +383,7 @@
                                     <tbody>
                                       <tr>
                                         <td align="left" style="font-size:0px;padding:0px 25px 0px 25px;word-break:break-word;">
-                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#a39f9f;">Submission Time:</div>
+                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#293538;">Submission Time:</div>
                                         </td>
                                       </tr>
                                     </tbody>
@@ -405,7 +405,7 @@
                                       <tbody>
                                         <tr>
                                           <td align="center" style="font-size:0px;padding:0px 25px 0px 25px;word-break:break-word;">
-                                            <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;font-weight:500;line-height:1.7;text-align:center;color:#000000;">18:00 - 19:00</div>
+                                            <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;font-weight:700;line-height:1.7;text-align:center;color:#000000;">18:00 - 19:00</div>
                                           </td>
                                         </tr>
                                       </tbody>
@@ -439,7 +439,7 @@
                                     <tbody>
                                       <tr>
                                         <td align="left" style="font-size:0px;padding:0px 25px 0px 25px;word-break:break-word;">
-                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#a39f9f;">Topic&nbsp;</div>
+                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#293538;">Topic&nbsp;</div>
                                         </td>
                                       </tr>
                                     </tbody>
@@ -461,7 +461,7 @@
                                       <tbody>
                                         <tr>
                                           <td align="center" style="font-size:0px;padding:0px 25px 0px 25px;word-break:break-word;">
-                                            <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;font-weight:500;line-height:1.7;text-align:center;color:#000000;">[[[Topic]]]</div>
+                                            <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;font-weight:700;line-height:1.7;text-align:center;color:#000000;">[[[Topic]]]</div>
                                           </td>
                                         </tr>
                                       </tbody>
@@ -491,7 +491,7 @@
                             <tbody>
                               <tr>
                                 <td align="left" style="font-size:0px;padding:20px 25px 20px 25px;word-break:break-word;">
-                                  <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#000000;">Complete Now <a style="color:#407178" href="">
+                                  <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#000000;">Complete Now <a style="color:#407178;font-weight: 700;" href="">
 
                                       [Writing Allocation Link]
                                     </a></div>
