--- a/mono-server/modules/app/src/main/resources/email/educator/session-requested.html
+++ b/mono-server/modules/app/src/main/resources/email/educator/session-requested.html
@@ -155,7 +155,7 @@
                             <tbody>
                               <tr>
                                 <td align="center" style="font-size:0px;padding:0px 25px 0px 25px;word-break:break-word;">
-                                  <div style="font-family:Montserrat;font-size:21px;font-weight:700;line-height:1.7;text-align:center;color:#448878;">Review Skills Assessment Reminder</div>
+                                  <div style="font-family:Montserrat;font-size:21px;font-weight:700;line-height:1.7;text-align:center;color:#448878;">New Session Request</div>
                                 </td>
                               </tr>
                             </tbody>
@@ -183,7 +183,7 @@
                                     <tbody>
                                       <tr>
                                         <td align="left" style="font-size:0px;padding:10px 25px 10px 25px;word-break:break-word;">
-                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:16px;font-weight:normal;line-height:1.7;text-align:left;color:#000000;">Dear [Educator]:<div>We kindly remind you to review the interviews allocated to you by the admin on Uni-D. Please log in to your account to review the details:
+                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:16px;font-weight:normal;line-height:1.7;text-align:left;color:#000000;">Dear [Educator]:<div>A new session has been requested on Uni-D. Please review the details below:
                                         </td>
                                       </tr>
                                     </tbody>
@@ -215,7 +215,7 @@
                                     <tbody>
                                       <tr>
                                         <td align="left" style="font-size:0px;padding:0px 25px 0px 25px;word-break:break-word;">
-                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#293538;">Interview ID</div>
+                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#293538;">Session Type</div>
                                         </td>
                                       </tr>
                                     </tbody>
@@ -423,62 +423,7 @@
                   </tbody>
                 </table>
               </div>
-              <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="600px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-              <div style="margin:0px auto;max-width:600px;">
-                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
-                  <tbody>
-                    <tr>
-                      <td style="border:none;direction:ltr;font-size:0px;padding:5px 0px 5px 0px;text-align:center;">
-                        <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:300px;" ><![endif]-->
-                        <div class="mj-column-per-50 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
-                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                            <tbody>
-                              <tr>
-                                <td style="border:none;vertical-align:top;padding:0px 0px 0px 0px;">
-                                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
-                                    <tbody>
-                                      <tr>
-                                        <td align="left" style="font-size:0px;padding:0px 25px 0px 25px;word-break:break-word;">
-                                          <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#293538;">Topic&nbsp;</div>
-                                        </td>
-                                      </tr>
-                                    </tbody>
-                                  </table>
-                                </td>
-                              </tr>
-                            </tbody>
-                          </table>
-                        </div>
-                        <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:300px;" ><![endif]-->
-                        <div class="mj-column-per-50 mj-outlook-group-fix" style="font-size:0;line-height:0;text-align:left;display:inline-block;width:100%;direction:ltr;vertical-align:top;">
-                          <!--[if mso | IE]><table border="0" cellpadding="0" cellspacing="0" role="presentation" ><tr><td style="vertical-align:top;width:300px;" ><![endif]-->
-                          <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
-                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                              <tbody>
-                                <tr>
-                                  <td style="border:none;vertical-align:top;padding:0px 0px 0px 0px;">
-                                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
-                                      <tbody>
-                                        <tr>
-                                          <td align="center" style="font-size:0px;padding:0px 25px 0px 25px;word-break:break-word;">
-                                            <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;font-weight:700;line-height:1.7;text-align:center;color:#000000;">[[[Topic]]]</div>
-                                          </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                  </td>
-                                </tr>
-                              </tbody>
-                            </table>
-                          </div>
-                          <!--[if mso | IE]></td></tr></table><![endif]-->
-                        </div>
-                        <!--[if mso | IE]></td></tr></table><![endif]-->
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
+           
               <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="600px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
               <div style="margin:0px auto;max-width:600px;">
                 <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
@@ -491,34 +436,11 @@
                             <tbody>
                               <tr>
                                 <td align="left" style="font-size:0px;padding:20px 25px 20px 25px;word-break:break-word;">
-                                  <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#000000;">Complete Now <a style="color:#407178; font-weight: 700;" href="">
-
-                                      [Interview Allocation Link]
-                                    </a></div>
-                                </td>
-                              </tr>
-                            </tbody>
-                          </table>
-                        </div>
-                        <!--[if mso | IE]></td></tr></table><![endif]-->
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="600px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-              <div style="margin:0px auto;max-width:600px;">
-                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
-                  <tbody>
-                    <tr>
-                      <td style="direction:ltr;font-size:0px;padding:0px;text-align:left;">
-                        <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:600px;" ><![endif]-->
-                        <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
-                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
-                            <tbody>
-                              <tr>
-                                <td align="left" style="font-size:0px;padding:20px 25px 20px 25px;word-break:break-word;">
-                                  <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#000000;">If you have any questions or need further information, please contact our support team.</div>
+                                  <div style="font-family:lucida Grande,Verdana,Microsoft YaHei;font-size:14px;line-height:1.7;text-align:left;color:#000000;">
+                                    Accept/ Reject here <a href="" style="color: #407178; font-weight: 700;" >[Manage Session Link]</a>
+                                    <br/>
+                                    <br/>
+                                    If you have any questions or need further information, please contact our support team.</div>
                                 </td>
                               </tr>
                             </tbody>
