--- a/mono-server/modules/app/src/main/resources/email/educator/writing-skills-allocated.html
+++ b/mono-server/modules/app/src/main/resources/email/educator/writing-skills-allocated.html
@@ -490,7 +490,7 @@
                                                 font-size: 14px;
                                                 line-height: 1.7;
                                                 text-align: left;
-                                                color: #a39f9f;
+                                                color: #293538;
                                               "
                                             >
                                               Writing ID
@@ -667,7 +667,7 @@
                                                 font-size: 14px;
                                                 line-height: 1.7;
                                                 text-align: left;
-                                                color: #a39f9f;
+                                                color: #293538;
                                               "
                                             >
                                               Student
@@ -844,7 +844,7 @@
                                                 font-size: 14px;
                                                 line-height: 1.7;
                                                 text-align: left;
-                                                color: #a39f9f;
+                                                color: #293538;
                                               "
                                             >
                                               Submission Date:
@@ -1021,7 +1021,7 @@
                                                 font-size: 14px;
                                                 line-height: 1.7;
                                                 text-align: left;
-                                                color: #a39f9f;
+                                                color: #293538;
                                               "
                                             >
                                               Submission Time:
@@ -1198,7 +1198,7 @@
                                                 font-size: 14px;
                                                 line-height: 1.7;
                                                 text-align: left;
-                                                color: #a39f9f;
+                                                color: #293538;
                                               "
                                             >
                                               Complete Now&nbsp;
