--- a/mono-server/modules/app/src/main/resources/email/educator/session-reschedule-completed.html
+++ b/mono-server/modules/app/src/main/resources/email/educator/session-reschedule-completed.html
@@ -302,7 +302,7 @@
                                         color: #448878;
                                       "
                                     >
-                                      Interviews Allocation
+                                      Session Reschedule Completed
                                     </div>
                                   </td>
                                 </tr>
@@ -390,15 +390,16 @@
                                                 font-weight: normal;
                                                 line-height: 1.7;
                                                 text-align: left;
-                                                color: #000000;
+                                                color: #293538;
                                               "
                                             >
                                               Dear [Educator]:
                                               <div>
-                                                We have allocated new skills and
-                                                interviews for you on Uni-D.
-                                                Please log in to your account to
-                                                review the details:
+                                                We want to inform you that the
+                                                session you requested to
+                                                reschedule on Uni-D has been
+                                                successfully completed. The new
+                                                details are as follows:
                                               </div>
                                             </div>
                                           </td>
@@ -493,7 +494,7 @@
                                                 color: #293538;
                                               "
                                             >
-                                              Interview ID
+                                              Session Type
                                             </div>
                                           </td>
                                         </tr>
@@ -571,10 +572,10 @@
                                                   font-weight: 700;
                                                   line-height: 1.7;
                                                   text-align: center;
-                                                  color: #000000;
+                                                  color: #293538;
                                                 "
                                               >
-                                                [ID]
+                                                [Type]
                                               </div>
                                             </td>
                                           </tr>
@@ -593,6 +594,7 @@
                     </tbody>
                   </table>
                 </div>
+
                 <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="600px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
                 <div style="margin: 0px auto; max-width: 600px">
                   <table
@@ -670,7 +672,7 @@
                                                 color: #293538;
                                               "
                                             >
-                                              Student
+                                              Educator
                                             </div>
                                           </td>
                                         </tr>
@@ -748,10 +750,10 @@
                                                   font-weight: 700;
                                                   line-height: 1.7;
                                                   text-align: center;
-                                                  color: #000000;
+                                                  color: #293538;
                                                 "
                                               >
-                                                [Student]
+                                                [Educator]
                                               </div>
                                             </td>
                                           </tr>
@@ -925,7 +927,7 @@
                                                   font-weight: 700;
                                                   line-height: 1.7;
                                                   text-align: center;
-                                                  color: #000000;
+                                                  color: #293538;
                                                 "
                                               >
                                                 16 April 2023
@@ -1102,7 +1104,7 @@
                                                   font-weight: 700;
                                                   line-height: 1.7;
                                                   text-align: center;
-                                                  color: #000000;
+                                                  color: #293538;
                                                 "
                                               >
                                                 18:00 - 19:00
@@ -1124,6 +1126,7 @@
                     </tbody>
                   </table>
                 </div>
+
                 <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="600px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
                 <div style="margin: 0px auto; max-width: 600px">
                   <table
@@ -1138,16 +1141,15 @@
                       <tr>
                         <td
                           style="
-                            border: none;
                             direction: ltr;
                             font-size: 0px;
-                            padding: 5px 0px 5px 0px;
-                            text-align: center;
+                            padding: 0px;
+                            text-align: left;
                           "
                         >
-                          <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:300px;" ><![endif]-->
+                          <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:600px;" ><![endif]-->
                           <div
-                            class="mj-column-per-50 mj-outlook-group-fix"
+                            class="mj-column-per-100 mj-outlook-group-fix"
                             style="
                               font-size: 0px;
                               text-align: left;
@@ -1162,138 +1164,38 @@
                               cellpadding="0"
                               cellspacing="0"
                               role="presentation"
+                              style="vertical-align: top"
                               width="100%"
                             >
                               <tbody>
                                 <tr>
                                   <td
+                                    align="left"
                                     style="
-                                      border: none;
-                                      vertical-align: top;
-                                      padding: 0px 0px 0px 0px;
+                                      font-size: 0px;
+                                      padding: 20px 25px 20px 25px;
+                                      word-break: break-word;
                                     "
                                   >
-                                    <table
-                                      border="0"
-                                      cellpadding="0"
-                                      cellspacing="0"
-                                      role="presentation"
-                                      style=""
-                                      width="100%"
+                                    <div
+                                      style="
+                                        font-family: lucida Grande, Verdana,
+                                          Microsoft YaHei;
+                                        font-size: 14px;
+                                        line-height: 1.7;
+                                        text-align: left;
+                                        color: #293538;
+                                      "
                                     >
-                                      <tbody>
-                                        <tr>
-                                          <td
-                                            align="left"
-                                            style="
-                                              font-size: 0px;
-                                              padding: 0px 25px 0px 25px;
-                                              word-break: break-word;
-                                            "
-                                          >
-                                            <div
-                                              style="
-                                                font-family: lucida Grande,
-                                                  Verdana, Microsoft YaHei;
-                                                font-size: 14px;
-                                                line-height: 1.7;
-                                                text-align: left;
-                                                color: #293538;
-                                              "
-                                            >
-                                              Topic
-                                            </div>
-                                          </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
+                                      View Session Details
+                                      <a href="" style="color: #407178"
+                                        >[[Manage Session Link]]</a
+                                      >
+                                    </div>
                                   </td>
                                 </tr>
                               </tbody>
                             </table>
-                          </div>
-                          <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:300px;" ><![endif]-->
-                          <div
-                            class="mj-column-per-50 mj-outlook-group-fix"
-                            style="
-                              font-size: 0;
-                              line-height: 0;
-                              text-align: left;
-                              display: inline-block;
-                              width: 100%;
-                              direction: ltr;
-                              vertical-align: top;
-                            "
-                          >
-                            <!--[if mso | IE]><table border="0" cellpadding="0" cellspacing="0" role="presentation" ><tr><td style="vertical-align:top;width:300px;" ><![endif]-->
-                            <div
-                              class="mj-column-per-100 mj-outlook-group-fix"
-                              style="
-                                font-size: 0px;
-                                text-align: left;
-                                direction: ltr;
-                                display: inline-block;
-                                vertical-align: top;
-                                width: 100%;
-                              "
-                            >
-                              <table
-                                border="0"
-                                cellpadding="0"
-                                cellspacing="0"
-                                role="presentation"
-                                width="100%"
-                              >
-                                <tbody>
-                                  <tr>
-                                    <td
-                                      style="
-                                        border: none;
-                                        vertical-align: top;
-                                        padding: 0px 0px 0px 0px;
-                                      "
-                                    >
-                                      <table
-                                        border="0"
-                                        cellpadding="0"
-                                        cellspacing="0"
-                                        role="presentation"
-                                        style=""
-                                        width="100%"
-                                      >
-                                        <tbody>
-                                          <tr>
-                                            <td
-                                              align="center"
-                                              style="
-                                                font-size: 0px;
-                                                padding: 0px 25px 0px 25px;
-                                                word-break: break-word;
-                                              "
-                                            >
-                                              <div
-                                                style="
-                                                  font-family: lucida Grande,
-                                                    Verdana, Microsoft YaHei;
-                                                  font-size: 14px;
-                                                  font-weight: 700;
-                                                  line-height: 1.7;
-                                                  text-align: center;
-                                                  color: #000000;
-                                                "
-                                              >
-                                                [Topic]
-                                              </div>
-                                            </td>
-                                          </tr>
-                                        </tbody>
-                                      </table>
-                                    </td>
-                                  </tr>
-                                </tbody>
-                              </table>
-                            </div>
-                            <!--[if mso | IE]></td></tr></table><![endif]-->
                           </div>
                           <!--[if mso | IE]></td></tr></table><![endif]-->
                         </td>
@@ -1358,18 +1260,10 @@
                                         font-size: 14px;
                                         line-height: 1.7;
                                         text-align: left;
-                                        color: #000000;
+                                        color: #293538;
                                       "
                                     >
-                                      Complete Now
-                                      <a href="" style="color: #407178"
-                                        >[Interview Allocation Link]</a
-                                      >
-                                      <br />
-                                      <br />
-                                      Please provide your feedback and
-                                      assessment for each skill and interview.
-                                      If you have any questions or need
+                                      If you have any questions or need further
                                       assistance, please contact our support
                                       team.
                                     </div>
@@ -1441,7 +1335,7 @@
                                         font-size: 14px;
                                         line-height: 1.7;
                                         text-align: left;
-                                        color: #000000;
+                                        color: #293538;
                                       "
                                     >
                                       Best Regards,&nbsp;
